# bibtex-parser

./: .gitignore  CHANGELOG.md  bibtex-parser.cabal  bibtex-to-sqlite.cabal  cabal.project.freeze  testfile.bib  testfile_large.bib  testfile_no_keywords.bib
app/: BibtexType.hs  Debug.hs  Entry.hs  Field.hs  Main.hs  Parse.hs  Persistence.hs  UI.hs
app/Parse/: Bibtex.hs  Search.hs
app/Parse/Search/: Internal.hs
app/UI/: Internal.hs
test/: Spec.hs
