cabal-version:      2.4
name:               bibtex-parser
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  build-depends:
    base ^>=4.16.1.0
    , megaparsec
    , containers
    , text
    , split
    , brick
  exposed-modules:
    BibtexType
    , Entry
    , Field
    , Parse.Bibtex
    , Parse.Search
    , Parse.Search.Internal
    , UI
    , UI.Internal
  other-modules:
    Persistence
  hs-source-dirs:   app
  default-language: Haskell2010

executable bibtex-parser
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      BibtexType
      , Entry
      , Field
      , Parse.Bibtex
      , Parse.Search
      , Parse.Search.Internal
      , Persistence
      , UI
      , UI.Internal
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base ^>=4.16.1.0
      , megaparsec
      , containers
      , text
      , split
      , brick
    hs-source-dirs:   app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

test-suite bibtex-parser-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Paths_bibtex_parser
  hs-source-dirs:
    test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.7 && <5
    , HUnit
    , bibtex-parser
    , tasty
    , tasty-hunit
    , containers
  default-language: Haskell2010
